src/objects/seoWebsite__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>seoWebsites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bing_Top_10__c</fullName>
        <label>Bing Top 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <globalPicklist>geolocations</globalPicklist>
        <inlineHelpText>The geolocation that keyword ranking refers to.</inlineHelpText>
        <label>Geolocation</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Google_Average__c</fullName>
        <formula>IF(Keyword_Count__c &gt; 0, Google_Sum__c / Keyword_Count__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Average Rank</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Indexed_Pages__c</fullName>
        <label>Google Indexed Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Map_Top_10__c</fullName>
        <label>Google Places Top 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Google_Original_Average__c</fullName>
        <formula>IF(Keyword_Count__c &gt; 0, Google_Original_Sum__c / Keyword_Count__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Google Average Rank</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Original_Sum__c</fullName>
        <label>Google Original Sum</label>
        <summarizedField>seoThemeKeywords__c.Google_Original__c</summarizedField>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google_Places_Top_10_Count__c</fullName>
        <label>Google Places Top 10 Count</label>
        <summaryFilterItems>
            <field>seoThemeKeywords__c.Google_Places_Current__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>seoThemeKeywords__c.Google_Places_Current__c</field>
            <operation>lessOrEqual</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google_Places_Top_10_Percent__c</fullName>
        <formula>IF(Keyword_Count__c &gt; 0, Google_Places_Top_10_Count__c /  Keyword_Count__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage in Google Places Top 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Google_Sum__c</fullName>
        <label>Google Sum</label>
        <summarizedField>seoThemeKeywords__c.Google_Current__c</summarizedField>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google_Top_10_Count__c</fullName>
        <label>Google Top 10 Count</label>
        <summaryFilterItems>
            <field>seoThemeKeywords__c.Google_Current__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>seoThemeKeywords__c.Google_Current__c</field>
            <operation>lessOrEqual</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google_Top_10_Percent__c</fullName>
        <formula>IF(Keyword_Count__c &gt; 0, Google_Top_10_Count__c / Keyword_Count__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage in Page 1 Google</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Google_Top_10__c</fullName>
        <label>Google Top 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_Crawl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Crawl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword_Count__c</fullName>
        <label>Keywords</label>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Crawl_Completed_Date__c</fullName>
        <label>Last Crawl Completed Date</label>
        <summarizedField>seoThemeKeywords__c.Last_Crawl_Date__c</summarizedField>
        <summaryFilterItems>
            <field>seoThemeKeywords__c.Last_Crawl_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>seoThemeKeywords__c.seoWebsites__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Crawl_Date__c</fullName>
        <label>Last Crawl Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Report_Date__c</fullName>
        <label>Last Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SFDC_Projects__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipLabel>SEO Websites</relationshipLabel>
        <relationshipName>SEO_Websites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Keywords__c</fullName>
        <label>Prospect Keywords</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Notes__c</fullName>
        <label>Prospect Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncontactable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Searching_From__c</fullName>
        <label>Search filter</label>
        <picklist>
            <picklistValues>
                <fullName>The Web</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pages from Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_SEO_Report__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send SEO Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Project__r.Account_Product__r.Product_Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Update Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yahoo_Top_10__c</fullName>
        <label>Yahoo Top 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>website_url__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>SEO Website</label>
    <listViews>
        <fullName>Active_SEO_Websites</fullName>
        <columns>Send_SEO_Report__c</columns>
        <columns>NAME</columns>
        <columns>website_url__c</columns>
        <columns>Account__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Google_Top_10_Percent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>seoWebsite__c.Internal_SEO_Website</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active SEO Websites</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Send_SEO_Report__c</columns>
        <columns>NAME</columns>
        <columns>website_url__c</columns>
        <columns>Account__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Google_Top_10_Percent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>seoWebsite__c.Internal_SEO_Website</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GMT</fullName>
        <columns>Send_SEO_Report__c</columns>
        <columns>NAME</columns>
        <columns>website_url__c</columns>
        <columns>Account__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Google_Top_10_Percent__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>seoWebsite__c.Internal_SEO_Website</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>GetMoreTraffic</value>
        </filters>
        <label>Get More Traffic</label>
    </listViews>
    <listViews>
        <fullName>Internal_seo_sites</fullName>
        <columns>Send_SEO_Report__c</columns>
        <columns>NAME</columns>
        <columns>website_url__c</columns>
        <columns>Account__c</columns>
        <columns>Keyword_Count__c</columns>
        <columns>Google_Top_10_Percent__c</columns>
        <columns>Last_Crawl_Completed_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>seoWebsite__c.Internal_SEO_Website</value>
        </filters>
        <label>Internal SEO Websites</label>
    </listViews>
    <nameField>
        <label>SEO Website</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEO Websites</pluralLabel>
    <recordTypes>
        <fullName>Internal_SEO_Website</fullName>
        <active>true</active>
        <description>For SEO Opportunities</description>
        <label>Internal SEO Websites</label>
    </recordTypes>
    <recordTypes>
        <fullName>SEO_Prospect</fullName>
        <active>true</active>
        <description>SEO Prospects</description>
        <label>SEO Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>SEO_Websites</fullName>
        <active>true</active>
        <label>SEO Websites</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>